Code cleanup * add missing annotations * add if/else braces * add type variables * etc
git-svn-id: https://svn.apache.org/repos/asf/incubator/harmony/enhanced/classlib/trunk@465981 13f79535-47bb-0310-9956-ffa450edef68